--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: "Comic Sans MS", "Segoe UI", sans-serif;
-      background: linear-gradient(135deg, #ffd6ea, #ff9fcf);
+      background: linear-gradient(135deg, #ffb6c1,#ffd1dc)
       min-height: 100vh;
       display: flex;
       align-items: center;
@@ -121,3 +121,4 @@
 
 </body>
 </html>
+
