--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: "Comic Sans MS", "Segoe UI", sans-serif;
-      background: linear-gradient(135deg, #ffb6c1,#ffd1dc)
+      background: linear-gradient(135deg, #ffd1dc, #ffb6c1);
       min-height: 100vh;
       display: flex;
       align-items: center;
@@ -121,4 +121,3 @@
 
 </body>
 </html>
-
