--- a/index.html
+++ b/index.html
@@ -9,70 +9,110 @@
     body {
       margin: 0;
       font-family: "Comic Sans MS", "Segoe UI", sans-serif;
-      background: linear-gradient(135deg, #ffd1dc, #ffb6c1);
-      min-height: 100vh;
+      background: linear-gradient(
+        135deg,
+        #ffd6e8,   /* soft pink */
+        #e8f1ff    /* VERY light pastel blue */
+      );
+      min-height: 100dvh;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #ff4f9a;
+      color: #ff5fa2;
     }
 
     .card {
-      background: #fff0f7;
-      padding: 28px;
-      border-radius: 30px;
+      background: linear-gradient(
+        180deg,
+        #fff0f7,
+        #f7fbff
+      );
+      padding: 30px;
+      border-radius: 32px;
       width: 90%;
-      max-width: 400px;
+      max-width: 420px;
       text-align: center;
-      border: 3px solid #ffb6d9;
-      box-shadow: 0 20px 40px rgba(255, 79, 154, 0.3);
+      border: 3px solid #ffc1dc;
+      box-shadow: 0 18px 40px rgba(255, 120, 180, 0.25);
+      margin-top: 20px;
     }
 
     img {
       width: 110px;
       height: 110px;
       border-radius: 50%;
-      border: 4px solid #ff8fc4;
+      border: 4px solid #ff9ccc;
       object-fit: cover;
       margin-bottom: 10px;
+      background: #fff;
     }
 
     h1 {
-      margin: 8px 0 4px;
+      margin: 10px 0 4px;
       font-size: 26px;
     }
 
     h2 {
       font-size: 15px;
-      margin-bottom: 14px;
+      margin-bottom: 16px;
       font-weight: normal;
+      color: #ff7db6;
     }
 
     button {
       margin: 6px;
       padding: 10px 18px;
-      background: #ff8fc4;
+      background: linear-gradient(
+        135deg,
+        #ff9ccc,
+        #cfe3ff
+      );
       border: none;
-      border-radius: 20px;
+      border-radius: 22px;
       color: white;
       font-size: 15px;
       cursor: pointer;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 6px 14px rgba(255, 140, 200, 0.3);
+    }
+
+    button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 20px rgba(255, 140, 200, 0.35);
     }
 
     .section {
       display: none;
-      margin-top: 14px;
-      background: #ffe3f1;
-      padding: 14px;
-      border-radius: 18px;
+      margin-top: 16px;
+      background: linear-gradient(
+        180deg,
+        #ffe3f1,
+        #eef5ff
+      );
+      padding: 16px;
+      border-radius: 20px;
       font-size: 14px;
+      color: #ff5fa2;
     }
 
     .show {
       display: block;
+      animation: fadeIn 0.3s ease;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(6px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
 </head>
+
 <body>
 
   <div class="card">
