--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       font-family: "Comic Sans MS", "Segoe UI", sans-serif;
       background: linear-gradient(
         135deg,
-        #ffd6e8,   /* soft pink */
-        #e8f1ff    /* VERY light pastel blue */
+        #ffd6e8,   /* pastel pink */
+        #e6d9ff,   /* pastel purple */
+        #dbeeff    /* pastel blue */
       );
       min-height: 100dvh;
       display: flex;
@@ -25,15 +26,16 @@
       background: linear-gradient(
         180deg,
         #fff0f7,
-        #f7fbff
+        #f1eaff,
+        #eef6ff
       );
       padding: 30px;
       border-radius: 32px;
       width: 90%;
       max-width: 420px;
       text-align: center;
-      border: 3px solid #ffc1dc;
-      box-shadow: 0 18px 40px rgba(255, 120, 180, 0.25);
+      border: 3px solid #e6c8ff;
+      box-shadow: 0 18px 40px rgba(200, 150, 255, 0.35);
       margin-top: 20px;
     }
 
@@ -41,7 +43,7 @@
       width: 110px;
       height: 110px;
       border-radius: 50%;
-      border: 4px solid #ff9ccc;
+      border: 4px solid #cfa9ff;
       object-fit: cover;
       margin-bottom: 10px;
       background: #fff;
@@ -56,7 +58,7 @@
       font-size: 15px;
       margin-bottom: 16px;
       font-weight: normal;
-      color: #ff7db6;
+      color: #9b7cff;
     }
 
     button {
@@ -65,7 +67,8 @@
       background: linear-gradient(
         135deg,
         #ff9ccc,
-        #cfe3ff
+        #cdb7ff,
+        #b9ddff
       );
       border: none;
       border-radius: 22px;
@@ -73,12 +76,12 @@
       font-size: 15px;
       cursor: pointer;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
-      box-shadow: 0 6px 14px rgba(255, 140, 200, 0.3);
+      box-shadow: 0 6px 14px rgba(170, 130, 255, 0.35);
     }
 
     button:hover {
       transform: translateY(-2px);
-      box-shadow: 0 10px 20px rgba(255, 140, 200, 0.35);
+      box-shadow: 0 10px 20px rgba(170, 130, 255, 0.45);
     }
 
     .section {
@@ -87,23 +90,24 @@
       background: linear-gradient(
         180deg,
         #ffe3f1,
-        #eef5ff
+        #efe6ff,
+        #eaf3ff
       );
       padding: 16px;
       border-radius: 20px;
       font-size: 14px;
-      color: #ff5fa2;
+      color: #6b5cff;
     }
 
     .show {
       display: block;
-      animation: fadeIn 0.3s ease;
+      animation: fadeIn 0.35s ease;
     }
 
     @keyframes fadeIn {
       from {
         opacity: 0;
-        transform: translateY(6px);
+        transform: translateY(8px);
       }
       to {
         opacity: 1;
@@ -123,12 +127,10 @@
     <h1>Mari Varamashvili</h1>
     <h2>aka <strong>Varama</strong> 💕</h2>
 
-    <!-- BUTTONS -->
     <button onclick="showSection('about')">about me 💗</button>
     <button onclick="showSection('fun')">fun facts 😘</button>
     <button onclick="showSection('likes')">things i like ✨</button>
 
-    <!-- SECTIONS -->
     <div id="about" class="section">
       Hi! I’m Mari 💕<br>
       I’m 12 years old and in 6th grade 📚<br>
