--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <body>
 
   <div class="card">
-    <div style="font-size:24px;">🎀🐱🎀</div>
+    <div style="font-size:24px;">🩷🥹🩷</div>
 
     <img src="profile.jpg" alt="Varama">
 
@@ -133,14 +133,14 @@
 
     <div id="about" class="section">
       Hi! I’m Mari 💕<br>
-      I’m 12 years old and in 6th grade 📚<br>
-      Born on August 24, 2014 🎂<br>
-      From Georgia 💗
+      I’m 12 years old and in 6th grade 🙄<br>
+      Born on August 24, 2014 🥂<br>
+      From Georgia 🇬🇪💗
     </div>
 
     <div id="fun" class="section">
       ✨ I love learning new things<br>
-      💞 I love everyoneeee<br>
+      💞 I love animals i have a dog named max too!!!💕<br>
       🩷 Pink is my favorite color<br>
       🥹 I love cute stuff
     </div>
@@ -163,3 +163,4 @@
 
 </body>
 </html>
+
