--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Varama 💗</title>
+  <title>introduction💗</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -163,4 +163,5 @@
 
 </body>
 </html>
+
 
