--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <div id="fun" class="section">
       ✨ I love learning new things<br>
-      💞 I love animals i have a dog named max too!!!💕<br>
+      💞 I love animals i have a dog named max too!!💕<br>
       🩷 Pink is my favorite color<br>
       🥹 I love cute stuff
     </div>
@@ -163,5 +163,6 @@
 
 </body>
 </html>
+
 
 
